--- a/docs/JOSS/paper.bib
+++ b/docs/JOSS/paper.bib
@@ -301,7 +301,7 @@ archivePrefix = {arXiv},
 @PHDTHESIS{Brugger_phd_thesis,
 url = "http://www.theses.fr/2018AIXM0324",
 title = "Structure interne et minéralogie des exoplanètes terrestres de faible masse",
-author = "Brugger, Bastien",
+author = {{Brugger}, B.},
 year = "2018",
 note = "Thèse de doctorat dirigée par Mousis, Olivier et Deleuil, Magali Astrophysique et Cosmologie Aix-Marseille 2018",
 note = "2018AIXM0324",
@@ -404,7 +404,7 @@ archivePrefix = {arXiv},
 }
 
 @ARTICLE{Acuna21,
-       author = {{Acu{\~n}a}, Lorena and {Deleuil}, Magali and {Mousis}, Olivier and {Marcq}, Emmanuel and {Levesque}, Ma{\"e}va and {Aguichine}, Artyom},
+       author = {{Acu{\~n}a}, L. and {Deleuil}, M. and {Mousis}, O. and {Marcq}, E. and {Levesque}, M. and {Aguichine}, A.},
         title = "{Characterisation of the hydrospheres of TRAPPIST-1 planets}",
       journal = {\aap},
      keywords = {planets and satellites: interiors, planets and satellites: composition, planets and satellites: atmospheres, planets and satellites: individual: TRAPPIST-1, methods: statistical, methods: numerical, Astrophysics - Earth and Planetary Astrophysics},
