Added "Similar tools" section

--- a/docs/JOSS/paper.bib
+++ b/docs/JOSS/paper.bib
@@ -1,4 +1,260 @@
 
+@ARTICLE{Turbet20,
+       author = {{Turbet}, Martin and {Bolmont}, Emeline and {Ehrenreich}, David and {Gratier}, Pierre and {Leconte}, J{\'e}r{\'e}my and {Selsis}, Franck and {Hara}, Nathan and {Lovis}, Christophe},
+        title = "{Revised mass-radius relationships for water-rich rocky planets more irradiated than the runaway greenhouse limit}",
+      journal = {\aap},
+     keywords = {planets and satellites: terrestrial planets, planets and satellites: composition, planets and satellites: atmospheres, planets and satellites: individual: TRAPPIST-1, planets and satellites: interiors, methods: numerical, Astrophysics - Earth and Planetary Astrophysics, Physics - Atmospheric and Oceanic Physics, Physics - Geophysics},
+         year = 2020,
+        month = jun,
+       volume = {638},
+          eid = {A41},
+        pages = {A41},
+          doi = {10.1051/0004-6361/201937151},
+archivePrefix = {arXiv},
+       eprint = {1911.08878},
+ primaryClass = {astro-ph.EP},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2020A&A...638A..41T},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
+
+
+@ARTICLE{Seager07,
+       author = {{Seager}, S. and {Kuchner}, M. and {Hier-Majumder}, C.~A. and {Militzer}, B.},
+        title = "{Mass-Radius Relationships for Solid Exoplanets}",
+      journal = {\apj},
+     keywords = {Equation of State, Stars: Planetary Systems, Planets and Satellites: General, Astrophysics},
+         year = 2007,
+        month = nov,
+       volume = {669},
+       number = {2},
+        pages = {1279-1297},
+          doi = {10.1086/521346},
+archivePrefix = {arXiv},
+       eprint = {0707.2895},
+ primaryClass = {astro-ph},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2007ApJ...669.1279S},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
+@ARTICLE{Amadeo23,
+       author = {{Castro-Gonz{\'a}lez}, A. and {Demangeon}, O.~D.~S. and {Lillo-Box}, J. and {Lovis}, C. and {Lavie}, B. and {Adibekyan}, V. and {Acu{\~n}a}, L. and {Deleuil}, M. and {Aguichine}, A. and {Zapatero Osorio}, M.~R. and {Tabernero}, H.~M. and {Davoult}, J. and {Alibert}, Y. and {Santos}, N. and {Sousa}, S.~G. and {Antoniadis-Karnavas}, A. and {Borsa}, F. and {Winn}, J.~N. and {Allende Prieto}, C. and {Figueira}, P. and {Jenkins}, J.~M. and {Sozzetti}, A. and {Damasso}, M. and {Silva}, A.~M. and {Astudillo-Defru}, N. and {Barros}, S.~C.~C. and {Bonfils}, X. and {Cristiani}, S. and {Di Marcantonio}, P. and {Gonz{\'a}lez Hern{\'a}ndez}, J.~I. and {Curto}, G. Lo and {Martins}, C.~J.~A.~P. and {Nunes}, N.~J. and {Palle}, E. and {Pepe}, F. and {Seager}, S. and {Su{\'a}rez Mascare{\~n}o}, A.},
+        title = "{An unusually low-density super-Earth transiting the bright early-type M-dwarf GJ 1018 (TOI-244)}",
+      journal = {\aap},
+     keywords = {planets and satellites: individual: TOI-244 b, planets and satellites: detection, planets and satellites: composition, stars: individual: GJ 1018, techniques: radial velocities, techniques: photometric, Astrophysics - Earth and Planetary Astrophysics},
+         year = 2023,
+        month = jul,
+       volume = {675},
+          eid = {A52},
+        pages = {A52},
+          doi = {10.1051/0004-6361/202346550},
+archivePrefix = {arXiv},
+       eprint = {2305.04922},
+ primaryClass = {astro-ph.EP},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2023A&A...675A..52C},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
+
+@ARTICLE{Agui21,
+       author = {{Aguichine}, Artyom and {Mousis}, Olivier and {Deleuil}, Magali and {Marcq}, Emmanuel},
+        title = "{Mass-Radius Relationships for Irradiated Ocean Planets}",
+      journal = {\apj},
+     keywords = {Exoplanets, Hydrosphere, Planetary interior, Planetary theory, Exoplanet astronomy, Exoplanet structure, Computational methods, 498, 770, 1248, 1258, 486, 495, 1965, Astrophysics - Earth and Planetary Astrophysics},
+         year = 2021,
+        month = jun,
+       volume = {914},
+       number = {2},
+          eid = {84},
+        pages = {84},
+          doi = {10.3847/1538-4357/abfa99},
+archivePrefix = {arXiv},
+       eprint = {2105.01102},
+ primaryClass = {astro-ph.EP},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2021ApJ...914...84A},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
+
+
+@ARTICLE{Zeng16,
+       author = {{Zeng}, Li and {Sasselov}, Dimitar D. and {Jacobsen}, Stein B.},
+        title = "{Mass-Radius Relation for Rocky Planets Based on PREM}",
+      journal = {\apj},
+     keywords = {planets and satellites: composition, planets and satellites: general, planets and satellites: interiors, Astrophysics - Earth and Planetary Astrophysics},
+         year = 2016,
+        month = mar,
+       volume = {819},
+       number = {2},
+          eid = {127},
+        pages = {127},
+          doi = {10.3847/0004-637X/819/2/127},
+archivePrefix = {arXiv},
+       eprint = {1512.08827},
+ primaryClass = {astro-ph.EP},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2016ApJ...819..127Z},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
+
+@ARTICLE{Piaulet21,
+       author = {{Piaulet}, Caroline and {Benneke}, Bj{\"o}rn and {Rubenzahl}, Ryan A. and {Howard}, Andrew W. and {Lee}, Eve J. and {Thorngren}, Daniel and {Angus}, Ruth and {Peterson}, Merrin and {Schlieder}, Joshua E. and {Werner}, Michael and {Kreidberg}, Laura and {Jaouni}, Tareq and {Crossfield}, Ian J.~M. and {Ciardi}, David R. and {Petigura}, Erik A. and {Livingston}, John and {Dressing}, Courtney D. and {Fulton}, Benjamin J. and {Beichman}, Charles and {Christiansen}, Jessie L. and {Gorjian}, Varoujan and {Hardegree-Ullman}, Kevin K. and {Krick}, Jessica and {Sinukoff}, Evan},
+        title = "{WASP-107b's Density Is Even Lower: A Case Study for the Physics of Planetary Gas Envelope Accretion and Orbital Migration}",
+      journal = {\aj},
+     keywords = {Exoplanet formation, Planetary structure, Exoplanet atmospheres, 492, 1256, 487, Astrophysics - Earth and Planetary Astrophysics, Astrophysics - Instrumentation and Methods for Astrophysics},
+         year = 2021,
+        month = feb,
+       volume = {161},
+       number = {2},
+          eid = {70},
+        pages = {70},
+          doi = {10.3847/1538-3881/abcd3c},
+archivePrefix = {arXiv},
+       eprint = {2011.13444},
+ primaryClass = {astro-ph.EP},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2021AJ....161...70P},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
+
+@ARTICLE{Unterborn,
+       author = {{Unterborn}, C.~T. and {Desch}, S.~J. and {Haldemann}, J. and {Lorenzo}, A. and {Schulze}, J.~G. and {Hinkel}, N.~R. and {Panero}, W.~R.},
+        title = "{The Nominal Ranges of Rocky Planet Masses, Radii, Surface Gravities, and Bulk Densities}",
+      journal = {\apj},
+     keywords = {Planetary interior, Exoplanet structure, Exoplanet astronomy, Planet hosting stars, 1248, 495, 486, 1242, Astrophysics - Earth and Planetary Astrophysics},
+         year = 2023,
+        month = feb,
+       volume = {944},
+       number = {1},
+          eid = {42},
+        pages = {42},
+          doi = {10.3847/1538-4357/acaa3b},
+archivePrefix = {arXiv},
+       eprint = {2212.03934},
+ primaryClass = {astro-ph.EP},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2023ApJ...944...42U},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
+
+@ARTICLE{Baumeister,
+       author = {{Baumeister}, Philipp and {Tosi}, Nicola},
+        title = "{ExoMDN: Rapid characterization of exoplanet interior structures with mixture density networks★}",
+      journal = {\aap},
+     keywords = {planets and satellites: interiors, planets and satellites: composition, methods: numerical, methods: statistical, Astrophysics - Earth and Planetary Astrophysics, Computer Science - Machine Learning},
+         year = 2023,
+        month = aug,
+       volume = {676},
+          eid = {A106},
+        pages = {A106},
+          doi = {10.1051/0004-6361/202346216},
+archivePrefix = {arXiv},
+       eprint = {2306.09002},
+ primaryClass = {astro-ph.EP},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2023A&A...676A.106B},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
+
+@ARTICLE{exoint,
+       author = {{Wang}, H.~S. and {Liu}, F. and {Ireland}, T.~R. and {Brasser}, R. and {Yong}, D. and {Lineweaver}, C.~H.},
+        title = "{Enhanced constraints on the interior composition and structure of terrestrial exoplanets}",
+      journal = {\mnras},
+     keywords = {planets and satellites: composition, planets and satellites: interiors, planets and satellites: terrestrial planets, stars: abundances, Astrophysics - Earth and Planetary Astrophysics},
+         year = 2019,
+        month = jan,
+       volume = {482},
+       number = {2},
+        pages = {2222-2233},
+          doi = {10.1093/mnras/sty2749},
+archivePrefix = {arXiv},
+       eprint = {1810.04615},
+ primaryClass = {astro-ph.EP},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2019MNRAS.482.2222W},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
+
+@ARTICLE{Haldemann24,
+       author = {{Haldemann}, Jonas and {Dorn}, Caroline and {Venturini}, Julia and {Alibert}, Yann and {Benz}, Willy},
+        title = "{BICEPS: An improved characterization model for low- and intermediate-mass exoplanets}",
+      journal = {\aap},
+     keywords = {planets and satellites: interiors, planets and satellites: composition, methods: numerical, methods: statistical, equation of state},
+         year = 2024,
+        month = jan,
+       volume = {681},
+          eid = {A96},
+        pages = {A96},
+          doi = {10.1051/0004-6361/202346965},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2024A&A...681A..96H},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
+@ARTICLE{Egger24,
+       author = {{Egger}, J.~A. and {Osborn}, H.~P. and {Kubyshkina}, D. and {Mordasini}, C. and {Alibert}, Y. and {G{\"u}nther}, M.~N. and {Lendl}, M. and {Brandeker}, A. and {Heitzmann}, A. and {Leleu}, A. and {Damasso}, M. and {Bonfanti}, A. and {Wilson}, T.~G. and {Sousa}, S.~G. and {Haldemann}, J. and {Delrez}, L. and {Hooton}, M.~J. and {Zingales}, T. and {Luque}, R. and {Alonso}, R. and {Asquier}, J. and {B{\'a}rczy}, T. and {Navascues}, D. Barrado and {Barros}, S.~C.~C. and {Baumjohann}, W. and {Benz}, W. and {Billot}, N. and {Borsato}, L. and {Broeg}, C. and {Buder}, M. and {Castro-Gonz{\'a}lez}, A. and {Cameron}, A. Collier and {Correia}, A.~C.~M. and {Cortes}, D. and {Csizmadia}, Sz. and {Cubillos}, P.~E. and {Davies}, M.~B. and {Deleuil}, M. and {Deline}, A. and {Demangeon}, O.~D.~S. and {Demory}, B. -O. and {Derekas}, A. and {Edwards}, B. and {Ehrenreich}, D. and {Erikson}, A. and {Fortier}, A. and {Fossati}, L. and {Fridlund}, M. and {Gandolfi}, D. and {Gazeas}, K. and {Gillon}, M. and {G{\"u}del}, M. and {Helling}, Ch. and {Isaak}, K.~G. and {Kiss}, L.~L. and {Korth}, J. and {Lam}, K.~W.~F. and {Laskar}, J. and {Lavie}, B. and {des Etangs}, A. Lecavelier and {Lovis}, C. and {Luntzer}, A. and {Magrin}, D. and {Maxted}, P.~F.~L. and {Mer{\'\i}n}, B. and {Munari}, M. and {Nascimbeni}, V. and {Olofsson}, G. and {Ottensamer}, R. and {Pagano}, I. and {Pall{\'e}}, E. and {Peter}, G. and {Piazza}, D. and {Piotto}, G. and {Pollacco}, D. and {Queloz}, D. and {Ragazzoni}, R. and {Rando}, N. and {Rauer}, H. and {Ribas}, I. and {Rodrigues}, J. and {Santos}, N.~C. and {Scandariato}, G. and {S{\'e}gransan}, D. and {Simon}, A.~E. and {Smith}, A.~M.~S. and {Stalport}, M. and {Sulis}, S. and {Szab{\'o}}, Gy. M. and {Udry}, S. and {Van Grootel}, V. and {Venturini}, J. and {Villaver}, E. and {Walton}, N.~A.},
+        title = "{Unveiling the internal structure and formation history of the three planets transiting HIP 29442 (TOI-469) with CHEOPS}",
+      journal = {\aap},
+     keywords = {techniques: photometric, planets and satellites: formation, planets and satellites: interiors, planets and satellites: individual: HIP 29442, planetary systems, Astrophysics - Earth and Planetary Astrophysics},
+         year = 2024,
+        month = aug,
+       volume = {688},
+          eid = {A223},
+        pages = {A223},
+          doi = {10.1051/0004-6361/202450472},
+archivePrefix = {arXiv},
+       eprint = {2406.18653},
+ primaryClass = {astro-ph.EP},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2024A&A...688A.223E},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{mardigras,
+       author = {{Aguichine}, Artyom},
+        title = "{mardigras: A Visualization Tool of Theoretical Mass{\textendash}Radius Relations in the Context of Planetary Science}",
+      journal = {Research Notes of the American Astronomical Society},
+     keywords = {Planetary interior, Exoplanet catalogs, Exoplanet evolution, Exoplanets, Ocean planets, Extrasolar gaseous planets, Extrasolar rocky planets, Planetary structure, 1248, 488, 491, 498, 1151, 2172, 511, 1256},
+         year = 2024,
+        month = aug,
+       volume = {8},
+       number = {8},
+          eid = {216},
+        pages = {216},
+          doi = {10.3847/2515-5172/ad7506},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2024RNAAS...8..216A},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
+@ARTICLE{Suissa18,
+       author = {{Suissa}, Gabrielle and {Chen}, Jingjing and {Kipping}, David},
+        title = "{A HARDCORE model for constraining an exoplanet's core size}",
+      journal = {\mnras},
+     keywords = {planets and satellites: composition, planets and satellites: interiors, Astrophysics - Earth and Planetary Astrophysics},
+         year = 2018,
+        month = may,
+       volume = {476},
+       number = {2},
+        pages = {2613-2620},
+          doi = {10.1093/mnras/sty381},
+archivePrefix = {arXiv},
+       eprint = {1804.02019},
+ primaryClass = {astro-ph.EP},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2018MNRAS.476.2613S},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
+
 @ARTICLE{Paxton11,
        author = {{Paxton}, Bill and {Bildsten}, Lars and {Dotter}, Aaron and {Herwig}, Falk and {Lesaffre}, Pierre and {Timmes}, Frank},
         title = "{Modules for Experiments in Stellar Astrophysics (MESA)}",
