Addressed line-by-line comments from Ryan

--- a/docs/JOSS/paper.bib
+++ b/docs/JOSS/paper.bib
@@ -1,4 +1,429 @@
 
+
+@INPROCEEDINGS{Marley07,
+       author = {{Marley}, M.~S. and {Fortney}, J. and {Seager}, S. and {Barman}, T.},
+        title = "{Atmospheres of Extrasolar Giant Planets}",
+     keywords = {Astrophysics},
+    booktitle = {Protostars and Planets V},
+         year = 2007,
+       editor = {{Reipurth}, Bo and {Jewitt}, David and {Keil}, Klaus},
+        month = jan,
+        pages = {733},
+          doi = {10.48550/arXiv.astro-ph/0602468},
+archivePrefix = {arXiv},
+       eprint = {astro-ph/0602468},
+ primaryClass = {astro-ph},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2007prpl.conf..733M},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
+
+@ARTICLE{Baraffe03,
+       author = {{Baraffe}, I. and {Chabrier}, G. and {Barman}, T.~S. and {Allard}, F. and {Hauschildt}, P.~H.},
+        title = "{Evolutionary models for cool brown dwarfs and extrasolar giant planets. The case of HD 209458}",
+      journal = {\aap},
+     keywords = {planetary systems, stars: brown dwarfs, stars: evolution, stars: individual (HD 209458), Astrophysics},
+         year = 2003,
+        month = may,
+       volume = {402},
+        pages = {701-712},
+          doi = {10.1051/0004-6361:20030252},
+archivePrefix = {arXiv},
+       eprint = {astro-ph/0302293},
+ primaryClass = {astro-ph},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2003A&A...402..701B},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
+
+@ARTICLE{Burrows97,
+       author = {{Burrows}, A. and {Sudarsky}, D. and {Sharp}, C. and {Marley}, M. and {Hubbard}, W.~B. and {Lunine}, J.~I. and {Guillot}, T. and {Saumon}, D. and {Freedman}, R.},
+        title = "{Advances in the Theory of Extrasolar Giant Planets and Brown Dwarfs}",
+      journal = {arXiv e-prints},
+     keywords = {Astrophysics},
+         year = 1997,
+        month = jun,
+          eid = {astro-ph/9706080},
+        pages = {astro-ph/9706080},
+          doi = {10.48550/arXiv.astro-ph/9706080},
+archivePrefix = {arXiv},
+       eprint = {astro-ph/9706080},
+ primaryClass = {astro-ph},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/1997astro.ph..6080B},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
+
+@ARTICLE{Rogers23,
+       author = {{Rogers}, James G. and {Schlichting}, Hilke E. and {Owen}, James E.},
+        title = "{Conclusive Evidence for a Population of Water Worlds around M Dwarfs Remains Elusive}",
+      journal = {\apjl},
+     keywords = {Exoplanet atmospheric evolution, Exoplanet atmospheric composition, 2308, 2021, Astrophysics - Earth and Planetary Astrophysics},
+         year = 2023,
+        month = apr,
+       volume = {947},
+       number = {1},
+          eid = {L19},
+        pages = {L19},
+          doi = {10.3847/2041-8213/acc86f},
+archivePrefix = {arXiv},
+       eprint = {2301.04321},
+ primaryClass = {astro-ph.EP},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2023ApJ...947L..19R},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
+
+@ARTICLE{Baraffe08,
+       author = {{Baraffe}, I. and {Chabrier}, G. and {Barman}, T.},
+        title = "{Structure and evolution of super-Earth to super-Jupiter exoplanets. I. Heavy element enrichment in the interior}",
+      journal = {\aap},
+     keywords = {stars: planetary systems, stars: individual: GJ 436, stars: individual: Hat-P-2, stars: individual: HD 149026, Astrophysics},
+         year = 2008,
+        month = apr,
+       volume = {482},
+       number = {1},
+        pages = {315-332},
+          doi = {10.1051/0004-6361:20079321},
+archivePrefix = {arXiv},
+       eprint = {0802.1810},
+ primaryClass = {astro-ph},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2008A&A...482..315B},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
+
+@ARTICLE{Baraffe03,
+       author = {{Baraffe}, I. and {Chabrier}, G. and {Barman}, T.~S. and {Allard}, F. and {Hauschildt}, P.~H.},
+        title = "{Evolutionary models for cool brown dwarfs and extrasolar giant planets. The case of HD 209458}",
+      journal = {\aap},
+     keywords = {planetary systems, stars: brown dwarfs, stars: evolution, stars: individual (HD 209458), Astrophysics},
+         year = 2003,
+        month = may,
+       volume = {402},
+        pages = {701-712},
+          doi = {10.1051/0004-6361:20030252},
+archivePrefix = {arXiv},
+       eprint = {astro-ph/0302293},
+ primaryClass = {astro-ph},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2003A&A...402..701B},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
+
+
+@ARTICLE{Miguel_rev,
+       author = {{Miguel}, Yamila and {Vazan}, Allona},
+        title = "{Interior and Evolution of the Giant Planets}",
+      journal = {Remote Sensing},
+     keywords = {giant planets interiors, giant planets evolution, planet formation, Astrophysics - Earth and Planetary Astrophysics, Astrophysics - Solar and Stellar Astrophysics},
+         year = 2023,
+        month = jan,
+       volume = {15},
+       number = {3},
+          eid = {681},
+        pages = {681},
+          doi = {10.3390/rs15030681},
+archivePrefix = {arXiv},
+       eprint = {2302.07656},
+ primaryClass = {astro-ph.EP},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2023RemS...15..681M},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
+
+
+@ARTICLE{Otegi20,
+       author = {{Otegi}, J.~F. and {Dorn}, C. and {Helled}, R. and {Bouchy}, F. and {Haldemann}, J. and {Alibert}, Y.},
+        title = "{Impact of the measured parameters of exoplanets on the inferred internal structure}",
+      journal = {\aap},
+     keywords = {planets and satellites: composition, planets and satellites: interiors, methods: observational, Astrophysics - Earth and Planetary Astrophysics},
+         year = 2020,
+        month = aug,
+       volume = {640},
+          eid = {A135},
+        pages = {A135},
+          doi = {10.1051/0004-6361/202038006},
+archivePrefix = {arXiv},
+       eprint = {2006.12353},
+ primaryClass = {astro-ph.EP},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2020A&A...640A.135O},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
+
+@ARTICLE{Thomas_Madhu16,
+       author = {{Thomas}, Scott W. and {Madhusudhan}, Nikku},
+        title = "{In hot water: effects of temperature-dependent interiors on the radii of water-rich super-Earths}",
+      journal = {\mnras},
+     keywords = {Planets and satellites: general, Planets and satellites: interiors, Astrophysics - Earth and Planetary Astrophysics},
+         year = 2016,
+        month = may,
+       volume = {458},
+       number = {2},
+        pages = {1330-1344},
+          doi = {10.1093/mnras/stw321},
+archivePrefix = {arXiv},
+       eprint = {1602.02758},
+ primaryClass = {astro-ph.EP},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2016MNRAS.458.1330T},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
+
+
+@ARTICLE{saumon95,
+       author = {{Saumon}, D. and {Chabrier}, G. and {van Horn}, H.~M.},
+        title = "{An Equation of State for Low-Mass Stars and Giant Planets}",
+      journal = {\apjs},
+     keywords = {EQUATION OF STATE, STARS: INTERIORS, STARS: LOW-MASS, BROWN DWARFS, STARS: PLANETARY SYSTEMS},
+         year = 1995,
+        month = aug,
+       volume = {99},
+        pages = {713},
+          doi = {10.1086/192204},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/1995ApJS...99..713S},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
+
+@ARTICLE{Irwin21,
+       author = {{Irwin}, Patrick G.~J. and {Dobinson}, Jack and {James}, Arjuna and {Toledo}, Daniel and {Teanby}, Nicholas A. and {Fletcher}, Leigh N. and {Orton}, Glenn S. and {P{\'e}rez-Hoyos}, Santiago},
+        title = "{Latitudinal variation of methane mole fraction above clouds in Neptune's atmosphere from VLT/MUSE-NFM: Limb-darkening reanalysis}",
+      journal = {\icarus},
+     keywords = {Astrophysics - Earth and Planetary Astrophysics},
+         year = 2021,
+        month = mar,
+       volume = {357},
+          eid = {114277},
+        pages = {114277},
+          doi = {10.1016/j.icarus.2020.114277},
+archivePrefix = {arXiv},
+       eprint = {2101.01063},
+ primaryClass = {astro-ph.EP},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2021Icar..35714277I},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
+@ARTICLE{Neptune_met1,
+       author = {{Karkoschka}, Erich and {Tomasko}, Martin G.},
+        title = "{The haze and methane distributions on Neptune from HST-STIS spectroscopy}",
+      journal = {\icarus},
+         year = 2011,
+        month = jan,
+       volume = {211},
+       number = {1},
+        pages = {780-797},
+          doi = {10.1016/j.icarus.2010.08.013},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2011Icar..211..780K},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{Atreya22,
+       author = {{Atreya}, Sushil K. and {Crida}, Aur{\'e}lien and {Guillot}, Tristan and {Li}, Cheng and {Lunine}, Jonathan I. and {Madhusudhan}, Nikku and {Mousis}, Olivier and {Wong}, Michael H.},
+        title = "{The Origin and Evolution of Saturn: A Post-Cassini Perspective}",
+      journal = {arXiv e-prints},
+     keywords = {Astrophysics - Earth and Planetary Astrophysics},
+         year = 2022,
+        month = may,
+          eid = {arXiv:2205.06914},
+        pages = {arXiv:2205.06914},
+          doi = {10.48550/arXiv.2205.06914},
+archivePrefix = {arXiv},
+       eprint = {2205.06914},
+ primaryClass = {astro-ph.EP},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2022arXiv220506914A},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
+@ARTICLE{Bloot23,
+       author = {{Bloot}, S. and {Miguel}, Y. and {Bazot}, M. and {Howard}, S.},
+        title = "{Exoplanet interior retrievals: core masses and metallicities from atmospheric abundances}",
+      journal = {\mnras},
+     keywords = {planets and satellites: composition, planets and satellites: gaseous planets, planets and satellites: interiors, Astrophysics - Earth and Planetary Astrophysics},
+         year = 2023,
+        month = aug,
+       volume = {523},
+       number = {4},
+        pages = {6282-6292},
+          doi = {10.1093/mnras/stad1873},
+archivePrefix = {arXiv},
+       eprint = {2306.11354},
+ primaryClass = {astro-ph.EP},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2023MNRAS.523.6282B},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{Howard23,
+       author = {{Howard}, S. and {Guillot}, T. and {Bazot}, M. and {Miguel}, Y. and {Stevenson}, D.~J. and {Galanti}, E. and {Kaspi}, Y. and {Hubbard}, W.~B. and {Militzer}, B. and {Helled}, R. and {Nettelmann}, N. and {Idini}, B. and {Bolton}, S.},
+        title = "{Jupiter's interior from Juno: Equation-of-state uncertainties and dilute core extent}",
+      journal = {\aap},
+     keywords = {planets and satellites: interiors, planets and satellites: gaseous planets, planets and satellites: composition, planets and satellites: individual: Jupiter, equation of state, Astrophysics - Earth and Planetary Astrophysics},
+         year = 2023,
+        month = apr,
+       volume = {672},
+          eid = {A33},
+        pages = {A33},
+          doi = {10.1051/0004-6361/202245625},
+archivePrefix = {arXiv},
+       eprint = {2302.09082},
+ primaryClass = {astro-ph.EP},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2023A&A...672A..33H},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
+@ARTICLE{Dorn15,
+       author = {{Dorn}, Caroline and {Khan}, Amir and {Heng}, Kevin and {Connolly}, James A.~D. and {Alibert}, Yann and {Benz}, Willy and {Tackley}, Paul},
+        title = "{Can we constrain the interior structure of rocky exoplanets from mass and radius measurements?}",
+      journal = {\aap},
+     keywords = {planets and satellites: terrestrial planets, planets and satellites: interiors, Astrophysics - Earth and Planetary Astrophysics},
+         year = 2015,
+        month = may,
+       volume = {577},
+          eid = {A83},
+        pages = {A83},
+          doi = {10.1051/0004-6361/201424915},
+archivePrefix = {arXiv},
+       eprint = {1502.03605},
+ primaryClass = {astro-ph.EP},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2015A&A...577A..83D},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
+
+@ARTICLE{ariel_int_rev,
+       author = {{Helled}, Ravit and {Werner}, Stephanie and {Dorn}, Caroline and {Guillot}, Tristan and {Ikoma}, Masahiro and {Ito}, Yuichi and {Kama}, Mihkel and {Lichtenberg}, Tim and {Miguel}, Yamila and {Shorttle}, Oliver and {Tackley}, Paul J. and {Valencia}, Diana and {Vazan}, Allona},
+        title = "{Ariel planetary interiors White Paper}",
+      journal = {Experimental Astronomy},
+     keywords = {Ariel, Planetary interiors, Planet composition, Atmosphere-interior interaction, Astrophysics - Instrumentation and Methods for Astrophysics, Astrophysics - Earth and Planetary Astrophysics},
+         year = 2022,
+        month = apr,
+       volume = {53},
+       number = {2},
+        pages = {323-356},
+          doi = {10.1007/s10686-021-09739-3},
+archivePrefix = {arXiv},
+       eprint = {2103.08481},
+ primaryClass = {astro-ph.IM},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2022ExA....53..323H},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
+
+@ARTICLE{Rogers24,
+       author = {{Rogers}, James G. and {Owen}, James E. and {Schlichting}, Hilke E.},
+        title = "{Under the light of a new star: evolution of planetary atmospheres through protoplanetary disc dispersal and boil-off}",
+      journal = {\mnras},
+     keywords = {planets and satellites: atmospheres, planets and satellites: formation, Astrophysics - Earth and Planetary Astrophysics},
+         year = 2024,
+        month = apr,
+       volume = {529},
+       number = {3},
+        pages = {2716-2733},
+          doi = {10.1093/mnras/stae563},
+archivePrefix = {arXiv},
+       eprint = {2311.12295},
+ primaryClass = {astro-ph.EP},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2024MNRAS.529.2716R},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
+
+@ARTICLE{Teske19,
+       author = {{Teske}, Johanna K. and {Thorngren}, Daniel and {Fortney}, Jonathan J. and {Hinkel}, Natalie and {Brewer}, John M.},
+        title = "{Do Metal-rich Stars Make Metal-rich Planets? New Insights on Giant Planet Formation from Host Star Abundances}",
+      journal = {\aj},
+     keywords = {High resolution spectroscopy, Exoplanet formation, 2096, 492, Astrophysics - Earth and Planetary Astrophysics, Astrophysics - Solar and Stellar Astrophysics},
+         year = 2019,
+        month = dec,
+       volume = {158},
+       number = {6},
+          eid = {239},
+        pages = {239},
+          doi = {10.3847/1538-3881/ab4f79},
+archivePrefix = {arXiv},
+       eprint = {1912.00255},
+ primaryClass = {astro-ph.EP},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2019AJ....158..239T},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
+
+@ARTICLE{Mah_Bitsch23,
+       author = {{Bitsch}, Bertram and {Mah}, Jingyi},
+        title = "{Enriching inner discs and giant planets with heavy elements}",
+      journal = {\aap},
+     keywords = {accretion, accretion disks, planets and satellites: formation, planets and satellites: composition, Astrophysics - Earth and Planetary Astrophysics},
+         year = 2023,
+        month = nov,
+       volume = {679},
+          eid = {A11},
+        pages = {A11},
+          doi = {10.1051/0004-6361/202347419},
+archivePrefix = {arXiv},
+       eprint = {2309.00509},
+ primaryClass = {astro-ph.EP},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2023A&A...679A..11B},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{Schneider21,
+       author = {{Schneider}, Aaron David and {Bitsch}, Bertram},
+        title = "{How drifting and evaporating pebbles shape giant planets. I. Heavy element content and atmospheric C/O}",
+      journal = {\aap},
+     keywords = {accretion, accretion disks, planets and satellites: formation, protoplanetary disks, planet-disk interactions, Astrophysics - Earth and Planetary Astrophysics},
+         year = 2021,
+        month = oct,
+       volume = {654},
+          eid = {A71},
+        pages = {A71},
+          doi = {10.1051/0004-6361/202039640},
+archivePrefix = {arXiv},
+       eprint = {2105.13267},
+ primaryClass = {astro-ph.EP},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2021A&A...654A..71S},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
+
+@ARTICLE{Ginzburg20,
+       author = {{Ginzburg}, Sivan and {Chiang}, Eugene},
+        title = "{Heavy-metal Jupiters by major mergers: metallicity versus mass for giant planets}",
+      journal = {\mnras},
+     keywords = {planets and satellites: composition, planets and satellites: dynamical evolution and stability, planets and satellites: formation, planets and satellites: gaseous planets, Astrophysics - Earth and Planetary Astrophysics, Astrophysics - Solar and Stellar Astrophysics},
+         year = 2020,
+        month = oct,
+       volume = {498},
+       number = {1},
+        pages = {680-688},
+          doi = {10.1093/mnras/staa2500},
+archivePrefix = {arXiv},
+       eprint = {2006.12500},
+ primaryClass = {astro-ph.EP},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2020MNRAS.498..680G},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
+
 @ARTICLE{Turbet20,
        author = {{Turbet}, Martin and {Bolmont}, Emeline and {Ehrenreich}, David and {Gratier}, Pierre and {Leconte}, J{\'e}r{\'e}my and {Selsis}, Franck and {Hara}, Nathan and {Lovis}, Christophe},
         title = "{Revised mass-radius relationships for water-rich rocky planets more irradiated than the runaway greenhouse limit}",
